[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kathara-makelab"
version = "1.0.0"
dependencies = [
  "pydantic",
  "pyyaml",
  "jinja2",
  "networkx",
  "pydot",
]

[project.scripts]
makelab = "makelab:main"

[tool.setuptools]
packages = ["makelab"]

[tool.setuptools.package-data]
makelab = [
  "templates/*"
]

